--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
 </div>
 
 <div class="destination" id="paris">
+<h2>Khartoum</h2>
+</div>
+
+<div class="destination" id="paris">
 <h2>Paris</h2>
 </div>
 </div>
